Fixed Leaderboards so it works with end event. Edit event works with teams
